# commerce-copilot

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  ChatGPT-Development.md  Dockerfile  Makefile  README.md  SECURITY.md  ai-handoff.md  docker-compose.yml  koyeb.yaml  pyproject.toml  retrieval_eval_report.json
.github/workflows/: ci.yml  hosted-smoke.yml
app/api/: approval_router.py  approval_service.py  audit.py  auth.py  db.py  incident_router.py  incident_service.py  inventory_service.py  main.py  query_router.py  query_service.py  schemas.py
app/common/: config.py  embeddings.py
app/ingestion/: __init__.py  chunker.py  config.py  embedder.py  loader.py  models.py  normalizer.py  report.py  repository.py  runner.py  segmenter.py
app/retrieval/: audit.py  config.py  dedupe.py  embedder.py  evaluator.py  exceptions.py  filters.py  models.py  policy.py  query_normalizer.py  repository.py  runtime.py  scorer.py  service.py
artifacts/: ingestion_report.json
docs/: architecture.md  demo.md  deployment.md  maintainer-runbook.md  release-checklist.md  retrieval-updates.md  review-kit.md
gcop_ingestion_scaffold.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
scripts/: check_db_schema.py  cleanup_demo_data.py  demo_queries.py  inspect_logs.py  run_api.py  run_ingestion.py  run_retrieval_eval.py  run_retrieval_smoke_test.py  seed_domain_data.py  smoke_remote_demo.py  verify_env.py
tests/: test_api.py  test_demo_flow.py  test_deployment_contract.py  test_query_routing.py  test_query_service.py  test_retrieval.py
ui/: app.py
(+19 files in other folders)
