[project]
name = "gcop-ingestion-scaffold"
version = "0.1.0"
description = "Ingestion scaffold for the Governed Commerce Operations Copilot corpus"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "openai>=1.0",
  "psycopg[binary]>=3.2",
  "uvicorn>=0.30,<1",
]

[project.scripts]
gcop-ingest = "app.ingestion.runner:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["artifacts*", "corpus*", "scripts*"]
